# PromptLift

./: .gitignore  Makefile  PRE_REGISTRATION.md  README.md  REVIEW_schemaevo.md  pyproject.toml
configs/: mvp_hotpotqa_gpt41mini.yaml  mvp_hover_gpt41mini.yaml  mvp_musique_gpt41mini.yaml  pilot_hotpotqa_gpt41mini.yaml  pilot_musique_gpt41mini.yaml  toy_schemaevo.yaml
data/hotpotqa/: confirmation.json  selection.json  train.json
schemaevo/: __init__.py  cli.py
schemaevo/adapters/: __init__.py  dspy.py  openai.py
schemaevo/benchmarks/: __init__.py  openai_closed_loop.py  openai_fixed_pool.py  readiness.py
schemaevo/datasets/: __init__.py  hotpotqa.py  hover.py  musique.py  scorers.py
schemaevo/eval/: __init__.py  budgeting.py  cache.py  cost_ledger.py  field_ablations.py  logging.py  scoring.py  stats.py
schemaevo/examples/: __init__.py  toy_multihop.py
schemaevo/experiments/: __init__.py  budget_pareto.py  causal_pilot.py  composability.py  deployment_invariance.py  external_prompt_optimizer.py  transfer.py
schemaevo/optimizers/: __init__.py  fixed_pool_schema.py  minibatching.py  pareto.py  schema_evo.py  selection.py
schemaevo/programs/: __init__.py  base.py  call_graph.py  compile_schema_program.py  prompt_diff.py
schemaevo/schemas/: __init__.py  candidate.py  grammar.py  human_templates.py  mutations.py  proposer.py  random_controls.py  serialization.py  validators.py
schemaevo/utils/: progress.py
scripts/: fetch_hotpotqa_hf.py  fetch_musique_hf.py  make_musique_splits.py  make_pilot_splits.py
tests/: test_schemaevo_core.py
