[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "schemaevo"
version = "0.1.0"
description = "Fixed-call schema evolution for multi-module LLM prompt programs."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "rich>=13.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
api = [
  "openai>=1.0",
  "tiktoken>=0.7",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
schemaevo = "schemaevo.cli:main"

[tool.setuptools.packages.find]
include = ["schemaevo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
